search api error fix...